Add chromedriver installation to travis config in extension template

--- a/cmd/lib/spree_cmd/templates/extension/travis.yml
+++ b/cmd/lib/spree_cmd/templates/extension/travis.yml
@@ -29,3 +29,9 @@ matrix:
 
 before_install:
   - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
+  - wget -N https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip -P ~/
+  - unzip ~/chromedriver_linux64.zip -d ~/
+  - rm ~/chromedriver_linux64.zip
+  - sudo mv -f ~/chromedriver /usr/local/share/
+  - sudo chmod +x /usr/local/share/chromedriver
+  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
