--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs: # a collection of steps
           BUNDLE_JOBS: 4
           BUNDLE_RETRY: 3
           BUNDLE_PATH: ~/spree/vendor/bundle
-          USE_PAPERCLIP: true
+          SPREE_USE_PAPERCLIP: true
       - image: circleci/postgres:10-alpine # database image
         environment: # environment variables for database
           POSTGRES_USER: postgres
